<?xml version="1.0"?>
<package format="3">
  <name>perception_assignment</name>
  <version>0.0.0</version>
  <description>Assignment 1 perception pipeline</description>

  <maintainer email="svellequ@asu.edu">Sean Vellequette</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <!-- Optional but commonly useful -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>